--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,7 @@
 
 </head>
 <body>
-  <header id="header">
-    <nav class="nav__header">
-      <ul>
-        <li></li>
-      </ul>
-    </nav>
-  </header>
+  <header id="header"></header>
   
   <main id="main"></main>
   
