--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,331 @@
 
 </head>
 <body>
-  <header id="header"></header>
+  <header class="header">
+    <div class="header__wrap-navmenu">
+      <div class="container">
+        <nav class="header__navmenu">
+          <img class="header__navmenu--logo" src="img/logo.png"></img>
+
+          <ul class="header__navmenu--list">
+            <li class="header__navmenu--li">
+              <span class="icon ticket--icon"></span>
+              <a href="#" class="header__navmenu--link">
+                plane tickets
+              </a>
+            </li>
+            <li class="header__navmenu--li active--travel">
+              <span class="icon travel--icon"></span>
+              <a href="#" class="header__navmenu--link">
+                travel
+              </a>
+            </li>
+            <li class="header__navmenu--li">
+              <span class="icon car--icon"></span>
+              <a href="#" class="header__navmenu--link">
+                rent car
+              </a>
+            </li>
+            <li class="header__navmenu--li">
+              <span class="icon hotel--icon"></span>
+              <a href="#" class="header__navmenu--link">
+                hotels
+              </a>
+            </li>
+            <li class="header__navmenu--li">
+              <a href="#" class="header__navmenu--language">en</a>
+            </li>
+            <li class="header__navmenu--li">
+              <span class="search--icon"></span>
+              <a href="#" class="header__navmenu--search"></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
   
-  <main id="main"></main>
+  <main class="main">
+    <section class="slider">
+      <div class="slider__owl owl-carousel owl-theme owl-loaded">
+        <div class="owl-stage-outer">
+          <div class="owl-stage">
+
+            <div class="owl-item">
+              <div class="slide-content slider__owl--item slide-1">
+                <div class="container">
+                  <div class="slide-content__bottom">
+                    <div class="left-box">
+                      <span class="headline-mini">experience</span>
+                      <h1 class="headline-big">american holiday</h1>
+                      <p class="headline-small">
+                        America has been growing as a tourist destination, and as it becomes more and more accustomed to receiving so many visitors, its hospitality just gets better.
+                      </p>
+                    </div>
+
+                    <div class="info__box">
+                      <ul class="info__box-nav">
+                        <li class="info__box-tab">
+                          <span class="info__box--icon ticket"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon hotel"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon car"></span>
+                        </li>
+                      </ul>
+
+                      <div class="info__box-content active">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">210</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">350</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">500</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="owl-item">
+              <div class="slide-content slider__owl--item slide-2">
+                <div class="container">
+                  <div class="slide-content__bottom">
+                    <div class="left-box">
+                      <span class="headline-mini">experience</span>
+                      <h1 class="headline-big">italy holiday</h1>
+                      <p class="headline-small">
+                        Italy has been growing as a tourist destination, and as it becomes more and more accustomed to receiving so many visitors, its hospitality just gets better.
+                      </p>
+                    </div>
+
+                    <div class="info__box">
+                      <ul class="info__box-nav">
+                        <li class="info__box-tab">
+                          <span class="info__box--icon ticket"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon hotel"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon car"></span>
+                        </li>
+                      </ul>
+
+                      <div class="info__box-content active">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">150</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">256</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">800</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="owl-item">
+              <div class="slide-content slider__owl--item slide-3">
+                <div class="container">
+                  <div class="slide-content__bottom">
+                    <div class="left-box">
+                      <span class="headline-mini">experience</span>
+                      <h1 class="headline-big">africa holiday</h1>
+                      <p class="headline-small">
+                        Africa has been growing as a tourist destination, and as it becomes more and more accustomed to receiving so many visitors, its hospitality just gets better.
+                      </p>
+                    </div>
+
+                    <div class="info__box">
+                      <ul class="info__box-nav">
+                        <li class="info__box-tab">
+                          <span class="info__box--icon ticket"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon hotel"></span>
+                        </li>
+                        <li class="info__box-tab">
+                          <span class="info__box--icon car"></span>
+                        </li>
+                      </ul>
+
+                      <div class="info__box-content active">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">150</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">256</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+
+                      <div class="info__box-content">
+                        <div class="box__body">
+                          <span class="headline-info">starting at</span>
+                          <span class="prace-info">
+                            <span class="euro-icon"></span>
+                            <span class="cost">800</span>
+                          </span>
+                        </div>
+                        <div class="box__footer">
+                            <a href="#/" class="checked">
+                              <span class="checked-icon"></span>
+                              chek out offer
+                            </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="personaly-grid">
+      
+    </section>
+  </main>
   
-  <footer id="footer"></footer>
+  <footer class="footer"></footer>
 
 
     <!-- script's -onn -->
  <script src="js/libs.min.js"></script>
+ <script src="js/owl.carousel.js"></script>
  <script src="js/common.js"></script>
+
+ <script>
+  $('.owl-carousel').owlCarousel({
+      loop:true,
+      margin:5,
+      responsiveClass:true,
+      responsive:{
+          0:{
+              items:1,
+              nav:true
+          },
+          600:{
+              items:3,
+              nav:false
+          },
+          1000:{
+              items:1,
+              nav:false,
+              loop:true,
+              dots:true
+          }
+      }
+  });
+ </script>
     <!-- script's -off -->
 </body>
 </html>
