grid section complite

--- a/app/index.html
+++ b/app/index.html
@@ -316,39 +316,111 @@
           <div class="section__body--grid">
             
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/1.jpg"></img>
+              <img class="travel__img" src="img/personaly/per1.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>339
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <span class="hover__box--name">india</span>
+                <h3 class="hover__box--info">taj mahal from a different perspective</h3>
+              </div>
             </div>
 
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/2.jpg"></img>
+              <img class="travel__img" src="img/personaly/per2.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>259
+                </span>
+              </div>
+
+              <div class="hover__box hover__box--big">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">china</span>
+                  <h3 class="hover__box--info">Thousand Pillar Temple expedition</h3>
+                </div>
+                <a class="hover__box--more_btn"><span class="bullet"></span>find out more</a>
+              </div>
             </div>
 
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/3.jpg"></img>
+              <img class="travel__img" src="img/personaly/per3.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>920
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">greece</span>
+                  <h3 class="hover__box--info">santtorini island tresaure hunt</h3>
+                </div>
+              </div>
             </div>
             
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/4.jpg"></img>
+              <img class="travel__img" src="img/personaly/per4.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>210
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">india</span>
+                  <h3 class="hover__box--info">taj mahal from a different perspective</h3>
+                </div>
+              </div>
             </div>
 
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/5.jpg"></img>
+              <img class="travel__img" src="img/personaly/per5.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>259
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">china</span>
+                  <h3 class="hover__box--info">Thousand Pillar Temple expedition</h3>
+                </div>
+                <a class="hover__box--more_btn"><span class="bullet"></span>find out more</a>
+              </div>
             </div>
 
             <div class="box">
-              <img class="travel__img" src="img/cities-tour/6.jpg"></img>
+              <img class="travel__img" src="img/personaly/per6.jpg" width="390" height="390"></img>
 
-              <div class="hover__box"></div>
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>358
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">greece</span>
+                  <h3 class="hover__box--info">santtorini island tresaure hunt</h3>
+                </div>
+              </div>
             </div>
 
 
