--- a/app/index.html
+++ b/app/index.html
@@ -314,7 +314,6 @@
 
         <div class="section__body">
           <div class="section__body--grid">
-            
             <div class="box">
               <img class="travel__img" src="img/personaly/per1.jpg" width="390" height="390"></img>
 
@@ -422,9 +421,10 @@
                 </div>
               </div>
             </div>
-
-
           </div>
+        </div>
+        <div class="section__footer">
+          <a href="#/" class="btn__previevall"><span class="bullet"></span>view all</a>
         </div>
       </div>
     </section>
