section offers complite

--- a/app/index.html
+++ b/app/index.html
@@ -428,6 +428,49 @@
         </div>
       </div>
     </section>
+
+    <section class="offers">
+      <div class="container container__modif">
+        <div class="offers__content">
+
+          <span class="offers__content--minititle">Best offers</span>
+
+          <div class="offers__content--header">
+            <span class="offers__content-subtitle">experience</span>
+            <h2 class="offers__content-title">african safari</h2>
+            <p class="offers__content-description">
+              Africa has been growing as a tourist destination, and as it becomes more and more accustomed to receiving so many visitors, its hospitality just gets better.
+            </p>
+          </div>
+
+          <div class="offers__content--body">
+            <div class="offers__card">
+
+              <div class="offers__card--price">
+                <span class="tarif-inf">starting at</span>
+                <span class="tarif-cost">
+                  <span class="tarif-euro"></span>
+                  <span class="tarif-costs">210</span>
+                </span>
+              </div>
+
+              <div class="offers__card--descript">
+                <div class="descript__content">
+                  <h2 class="descript__title">kenya</h2>
+                  <p class="descript__txt">
+                    A fantastic 4-day Camping Safari to Kenya's Premier Reserve - <span class="txt-mark">The Masai Mara.</span>
+                  </p>
+                  <a class="descript__more"><span class="bullet"></span>find out more</a>
+                </div>
+              </div>
+
+              <a href="#/" class="btn-viewall"><span class="bullet"></span>view all</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </main>
   
   <footer class="footer"></footer>
