section sities tour complite

--- a/app/index.html
+++ b/app/index.html
@@ -467,8 +467,140 @@
               <a href="#/" class="btn-viewall"><span class="bullet"></span>view all</a>
             </div>
           </div>
-
         </div>
+      </div>
+    </section>
+
+    <section class="cities__tour">
+      <div class="container">
+        <div class="section__header">
+          <div class="section__header-title">
+            <span class="section__header--subtitle">open road</span>
+            <h1 class="section__header--headline">north american cities tour</h1>
+          </div>
+
+          <p class="section__header--ceo">
+            America has been growing as a tourist destination, and as it becomes more and more accustomed to receiving so many visitors, its hospitality just gets better.
+          </p>
+        </div>
+
+        <div class="section__body">
+          <div class="section__body--grid">
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/1.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>339
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <span class="hover__box--name">india</span>
+                <h3 class="hover__box--info">taj mahal from a different perspective</h3>
+              </div>
+            </div>
+
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/2.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>259
+                </span>
+              </div>
+
+              <div class="hover__box hover__box--big">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">china</span>
+                  <h3 class="hover__box--info">Thousand Pillar Temple expedition</h3>
+                </div>
+                <a class="hover__box--more_btn"><span class="bullet"></span>find out more</a>
+              </div>
+            </div>
+
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/3.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>920
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">canada</span>
+                  <h3 class="hover__box--info">montreal city night crawlers</h3>
+                </div>
+                <a class="hover__box--more_btn"><span class="bullet"></span>find out more</a>
+              </div>
+            </div>
+            
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/4.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>210
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">india</span>
+                  <h3 class="hover__box--info">taj mahal from a different perspective</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/5.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>259
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">china</span>
+                  <h3 class="hover__box--info">Thousand Pillar Temple expedition</h3>
+                </div>
+                <a class="hover__box--more_btn"><span class="bullet"></span>find out more</a>
+              </div>
+            </div>
+
+            <div class="box">
+              <img class="travel__img" src="img/cities-tour/6.jpg" width="390" height="390"></img>
+
+              <div class="box__price">
+                <span class="box__price--subtitle">starting at</span>
+                <span class="box__price--cost">
+                  <span class="euro-icon"></span>358
+                </span>
+              </div>
+
+              <div class="hover__box">
+                <div class="hover__box-header">
+                  <span class="hover__box--name">greece</span>
+                  <h3 class="hover__box--info">santtorini island tresaure hunt</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="section__footer">
+          <a href="#/" class="btn__previevall"><span class="bullet"></span>view all</a>
+        </div>
+
       </div>
     </section>
   </main>
