--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
   
   <main class="main">
     <section class="slider">
-      <div class="slider__owl owl-carousel owl-theme owl-loaded">
+      <div id="slider__owl" class="slider__owl owl-carousel owl-theme owl-loaded">
         <div class="owl-stage-outer">
           <div class="owl-stage">
 
@@ -603,6 +603,56 @@
 
       </div>
     </section>
+
+    <section class="hot__tours">
+      <div id="owl-slider" class="hot__tours--slider owl-carousel owl-theme owl-loaded">
+        <div class="owl-stage-outer">
+          <div class="owl-stage">
+
+            <div class="owl-item">
+              <div class="hot__tours-slide slide-1">
+                <div class="container">
+
+                  <div class="info__sticker">
+                    <h1 class="info__sticker--title">long journey`s</h1>
+
+                    <span class="info__sticker--inf">
+                      <span class="info__sticker--date">today</span>
+                      <span class="info__sticker--numb">34,098</span>
+                      <span class="info__sticker--dep">departures</span>
+                    </span>
+                  </div>
+
+                  <div class="card__info">
+                    <div class="card__info--descript">
+                      <div class="descript__content">
+                        <h2 class="descript__title">Taiwan</h2>
+                        <p class="descript__txt">
+                          it is a modern cosmopolitan metropolis with a lively and diversified face, filled with exuberance.
+                        </p>
+                        <a class="descript__more"><span class="bullet"></span>find out more</a>
+                      </div>
+                    </div>
+
+                    <div class="card__info--price">
+                      <span class="icon-aircraft"></span>
+                      <span class="tarif-inf">starting at</span>
+                      <span class="tarif-cost">
+                        <span class="tarif-euro"></span>
+                        <span class="tarif-costs">210</span>
+                      </span>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section> 
   </main>
   
   <footer class="footer"></footer>
@@ -614,7 +664,7 @@
  <script src="js/common.js"></script>
 
  <script>
-  $('.owl-carousel').owlCarousel({
+  $('#slider__owl').owlCarousel({
       loop:true,
       margin:5,
       autoplay:false,
@@ -628,13 +678,36 @@
           },
           600:{
               items:3,
-              nav:false
           },
           1000:{
               items:1,
               nav:false,
               loop:true,
               dots:true
+          }
+      }
+  });
+
+  $('#owl-slider').owlCarousel({
+      loop:true,
+      margin:5,
+      autoplay:false,
+      autoplayTimeout:5000,
+      autoplayHoverPause:true,
+      responsiveClass:true,
+      responsive:{
+          0:{
+              items:1,
+              nav:true
+          },
+          600:{
+              items:3,
+          },
+          1000:{
+              items:1,
+              nav:true,
+              loop:true,
+              dots:false
           }
       }
   });
